--- a/debian/control
+++ b/debian/control
@@ -8,7 +8,7 @@ XS-Python-Version: 2.6
 
 Package: papas
 Architecture: all
-Depends: python (>= 2.5), python-django (>= 1.1), python-pyinotify (>= 0.8), python-pexpect (>= 2.3)
+Depends: python (>= 2.5), python-django (>= 1.1), python-pyinotify (>= 0.8), python-pexpect (>= 2.3), python-paramiko
 XB-Python-Version: ${python:Versions}
 Recommends: apache2, libapache2-mod-wsgi
 Description: Django application to manage wifi hotspots
